src/main/kotlin/com/example/address_project/global/error/exception/ErrorCode.kt
package com.example.address_project.global.error.exception

enum class ErrorCode(
    val status: Int,
    val message: String
) {
}